[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
kurtbuilds_env = "0.3.2"
anyhow = "1.0.89"
tracing = "0.1.40"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
dirs = "5.0.1"
sqlmo = "0.22.3"
kurtbuilds_std_ext = "0.1.7"
indexmap = { version = "2.6.0", features = ["serde"] }
topological-sort = "0.2.2"
kurtbuilds_regex = "0.1.0"

[dev-dependencies]
shlex = "1.3.0"
